# dxn_api

./: .env  .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
DXNAutopilot/: DataCollector.py
api/: DataCollector.py  admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20230629_2047.py  0002_product.py  0002_product_available_product_image.py  0002_rename_agents_agent.py  0003_alter_product_image.py  0003_product.py  0003_sitesettings_product_hide.py  0004_alter_product_price.py  0005_alter_product_name_ar.py  0006_product_pv.py  0009_product_pv.py  __init__.py
dxn_api/: .env  asgi.py  settings.py  urls.py  wsgi.py
frontApp/: apps.py  urls.py  views.py
