[tool.poetry]
name = "dxn-api"
version = "0.1.0"
description = ""
authors = ["ZM <zanamziry720@gmail.com>"]
readme = "README.md"
packages = [{include = "dxn_api"}]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "4.11.1"
Django = "3.2.7"
djangorestframework = "3.14.0"
matplotlib = "3.5.0"
pytesseract = "0.3.10"
requests = "2.26.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
